<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:text="@string/simpleinterest"
            android:textSize="32sp"
            android:textColor="@color/green"/>



        <LinearLayout
            android:id="@+id/containerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTextView"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/principleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/principle"
                android:inputType="number" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <EditText
                android:id="@+id/timeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time"
                android:inputType="number" />

            <EditText
                android:id="@+id/rateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/rate"
                android:inputType="numberDecimal" />


            <TextView
                android:id="@+id/resultEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/result"
                android:textSize="30dp"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <Button
            android:id="@+id/calculateBttn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/containerLayout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/calculate"
            android:textSize="30sp" />
    </RelativeLayout>
</ScrollView>